--- a/btfd/package.json
+++ b/btfd/package.json
@@ -3,8 +3,11 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "bun test"
+    "test": "bun test",
+    "postinstall": "tsc"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
