--- a/btfd/package.json
+++ b/btfd/package.json
@@ -3,8 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "bun test",
-    "postinstall": "tsc"
+    "test": "bun test"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
