--- a/btfd/package.json
+++ b/btfd/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "test": "bun test"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "files": [
+    "lib"
+  ],
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
